@@ -34,6 +34,7 @@ import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.EventPriority;
 import org.bukkit.event.Listener;
+import org.bukkit.event.player.PlayerChangedWorldEvent;
 import org.bukkit.event.player.PlayerJoinEvent;
 import org.bukkit.event.player.PlayerKickEvent;
 import org.bukkit.event.player.PlayerPortalEvent;
@@ -357,6 +358,11 @@ public class BukkitPermissions {
 				updatePermissions(event.getPlayer());
 			}
 			setPlayer_join(false);
+		}
+		
+		@EventHandler(priority = EventPriority.LOWEST)
+		public void onPlayerChangeWorld(PlayerChangedWorldEvent event) { // will portal into another world
+			updatePermissions(event.getPlayer(), event.getPlayer().getWorld().getName());
 		}
 
 		@EventHandler(priority = EventPriority.LOWEST)
