@@ -132,3 +132,4 @@ v 1.9:
 	      - '*'
 	      - -vanish.*
 	      - vanish.standard
+	- Track the 'onPlayerChangeWorld' event as some teleports seem to not be triggering a world move.
